# trve.in

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  build-prod.sh  docker-compose.yml
front-end/: .env.example  TODO.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
front-end/app/: globals.css  layout.tsx  page.tsx
front-end/components/: aboutMe.tsx  cycling.tsx  header.tsx  listening.tsx  listeningNow.tsx  loading.tsx  madeBy.tsx  mastodon.tsx  running.tsx  social.tsx  status.tsx  theme-provider.tsx
front-end/types/: index.d.ts
src/: main.rs
