[package]
name = "rust-api-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
tokio = { version = "1.33.0", features = ["full"] }
serde = { version = "1.0.190", features = ["derive"] }
dotenvy = "0.15.7"
chrono = "0.4.31"
